--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -44,12 +44,11 @@ contexts~\cite{ZackonEtAl25}.
 
 In this paper we attack the linearity challenge from a different perspective:
 \emph{instead of proposing techniques that make it easy to formalize the
-calculus in the challenge, we propose a (relatively new) calculus that is easy
-to formalize with the known techniques}.\Luca{dobbiamo dire perché lo spirito
-della challenge è rispettato, e dunque giustificare il titolo dell'articolo.
-Dire che il nostro non è un calcolo ad hoc, ma ha fondamenti logici importanti,
-è completo, ed è strettamente in relazione con altri modelli analoghi (CP e
-linear pi)}
+calculus in the challenge, we propose a calculus that is easy to formalize with
+the known techniques}.\Luca{dobbiamo dire perché lo spirito della challenge è
+rispettato, e dunque giustificare il titolo dell'articolo. Dire che il nostro
+non è un calcolo ad hoc, ma ha fondamenti logici importanti, è completo, ed è
+strettamente in relazione con altri modelli analoghi (CP e linear pi)}
 %
 More specifically, we describe a calculus called \LCP whose type system
 coincides with the proof system of \emph{classical linear logic} and that
