--- a/paper/main.tex
+++ b/paper/main.tex
@@ -4,6 +4,7 @@
 \usepackage{mathtools}
 \usepackage{stmaryrd}
 \usepackage{mathpartir}
+\usepackage{prooftree}
 \usepackage{agda}
 \usepackage{xspace}
 \usepackage{upgreek}
