--- a/paper/related.tex
+++ b/paper/related.tex
@@ -391,3 +391,7 @@ more than 1Mb of Coq code.
 FARE CONFRONTO TRA LCP E IL CALCOLO NELLA CHALLENGE PER DIRE CHE NON SI RIESCONO
 A MODELLARE TUTTI I PROCESSI, MAGARI SI PUÒ FARE UN ESEMPIO NELLA SEZIONE SUL
 CALCOLO.
+
+PARLARE DI CP E DI PI CALCOLO LINEARE
+
+BELLIN E SCOTT?
