--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -150,22 +150,22 @@ processes up to renaming of bound channels.
     consumed as its dual $\dual\Bool = \Bot \With \Bot$. Following these types,
     the boolean constants can be modeled by the processes
     \[
-        \TrueP(x) \eqdef \Select\x\LeftTag\z.\Close\z
+        \TrueP(x) \eqdef \Select\x\LeftTag{x'}.\Close{x'}
         \qquad
-        \FalseP(x) \eqdef \Select\x\RightTag\z.\Close\z
+        \FalseP(x) \eqdef \Select\x\RightTag{x'}.\Close{x'}
     \]
     and the boolean negation function by the process
     \[
         \NotP(x,y) \eqdef
-        \BigCase\x\u{
-            \Wait\u.\FalseP(y)
+        \BigCase\x{x'}{
+            \Wait{x'}.\FalseP(y)
         }{
-            \Wait\u.\TrueP(y)
+            \Wait{x'}.\TrueP(y)
         }
     \]
 
     As an example, the composition $\Cut[\Bool]\x{\TrueP(x)}{\NotP(x,y)}$
-    computes the negation of true.
+    produces false on $y$.
     %
     Note the use of explicit continuations in these processes and the fact that
     each channel is used \emph{exactly once}. The same processes in \CP would be
@@ -314,7 +314,7 @@ that they can interact with corresponding complementary actions in the context
 surrounding the process.
 %
 All these rules have implicit side-conditions aimed at preserving the meaning of
-names when binders are moved around: terms entering or exiting the scope of a
+channels when binders are moved around: terms entering or exiting the scope of a
 binder for $x$ must not have free occurrences of $x$. This holds also for the
 type variable $X$ in the rule \SForall.
 %
@@ -369,14 +369,15 @@ reduction up to structural pre-congruence.
 \subsection{Type System}
 \label{sec:typing-rules}
 
-Typing contexts (\ie sequents) are finite maps from channel names to types
-written as $x_1 : A_1, \dots, x_n : A_n$ and ranged over by $\ContextC$ and
-$\ContextD$. We write $\ContextC, \ContextD$ for the union of $\ContextC$ and
-$\ContextD$ when they have disjoint domains. We write $\WhyNot\Context$ for some
-context $\Context = x_1 : \WhyNot A_1, \dots, x_n : \WhyNot A_n$ where all the
-types in its range are prefixed by the $\WhyNot$ modality. We call these types
-\emph{unrestricted}, since they are used to denote shared channels that can be
-(explicitly) discarded and duplicated at will.
+We use typing contexts (\ie sequents) to keep track of the type of channels.
+Typing contexts are finite maps from channels to types written as $x_1 : A_1,
+\dots, x_n : A_n$ and ranged over by $\ContextC$ and $\ContextD$. We write
+$\ContextC, \ContextD$ for the union of $\ContextC$ and $\ContextD$ when they
+have disjoint domains. We write $\WhyNot\Context$ for some context $\Context =
+x_1 : \WhyNot A_1, \dots, x_n : \WhyNot A_n$ where all the types in its range
+are prefixed by the $\WhyNot$ modality. We call these types \emph{unrestricted},
+since they are used to denote shared channels that can be (explicitly) discarded
+and duplicated at will.
 
 \begin{table}[t]
     \caption{Typing rules of \Calculus.}
@@ -485,8 +486,171 @@ corresponding to the derivation for $\wtp{}\Context$.
 The typing rules are shown in \Cref{tab:typing-rules}. Since they are in
 one-to-one correspondence with -- and have exactly the same structure of -- the
 proof rules of classical linear logic, the reader may refer to the standard
-literature on linear logic~\cite{} or propositions as sessions~\citep{Wadler14}
-for their interpretation.
+literature on linear logic~\cite{Girard87} or propositions as
+sessions~\citep{Wadler14} for their interpretation.
+
+% \begin{example}
+%     \label{ex:typing-booleans}
+%     Below we show the typing derivation for the process
+%     $\Cut[\Bool]{x}{\TrueP(x)}{\NotP(x,y)}$ defined in \Cref{ex:booleans}, where
+%     we have elided some obvious sub-derivations.
+%     \[
+%         \begin{prooftree}
+%             \[
+%                 \[
+%                     \justifies
+%                     \wtp{
+%                         \Close{x'}
+%                     }{
+%                         x' : \One
+%                     }
+%                     \using\CloseRule
+%                 \]
+%                 \justifies
+%                 \wtp{
+%                     \TrueP(x)
+%                 }{
+%                     x : \Bool
+%                 }
+%                 \using\SelectRule
+%             \]
+%             \[
+%                 \[
+%                     \[
+%                         \mathstrut\smash\vdots
+%                         \justifies
+%                         \wtp{
+%                             \FalseP(y)
+%                         }{
+%                             y : \Bool
+%                         }
+%                     \]
+%                     \justifies
+%                     \wtp{
+%                         \Wait{x'}.\FalseP(y)
+%                     }{
+%                         x' : \Bot,
+%                         y : \Bool
+%                     }
+%                     \using\WaitRule
+%                 \]
+%                 \[
+%                     \mathstrut\smash\vdots
+%                     \justifies
+%                     \wtp{
+%                         \Wait{x'}.\TrueP(y)
+%                     }{
+%                         x' : \Bot,
+%                         y : \Bool
+%                     }
+%                 \]
+%                 \justifies
+%                 \wtp{
+%                     \NotP(x,y)
+%                 }{
+%                     x : \dual\Bool,
+%                     y : \Bool
+%                 }
+%                 \using\CaseRule
+%             \]
+%             \justifies
+%             \wtp{
+%                 \Cut[\Bool]{x}{\TrueP(x)}{\NotP(x,y)}
+%             }{
+%                 y : \Bool
+%             }
+%             \using\CutRule
+%         \end{prooftree}
+%     \]
+% \end{example}
+
+\begin{example}
+    \label{ex:echo}
+    In this example we define a polymorphic echo server:
+    \[
+        \EchoP(x) \eqdef
+        \Server\x\y.
+        \Forall\y\X{y'}.
+        \Join{y'}\u{y''}.
+        \Fork{y''}\v{y'''}{\Link\u\v}{\Close{y'''}}
+    \]
+
+    The server accepts requests on the shared channel $x$. Each request
+    established a new session, initially represented by the channel $y$. The
+    session consists in receiving the type $X$ of the value being echoed
+    followed by the value itself $u$. The value is then sent back unchanged and
+    the session is terminated. Note the succession of different (linear)
+    channels $y, y', y'', y'''$ that chain the session together.
+
+    We establish that $\EchoP(x)$ is well typed with the following deerivation
+    \[
+        \begin{prooftree}
+            \[
+                \[
+                    \[
+                        \[
+                            \justifies
+                            \wtp{
+                                \Link\u\v
+                            }{
+                                u : X,
+                                v : \dual\X
+                            }
+                            \using\LinkRule
+                        \]
+                        \[
+                            \justifies
+                            \wtp{
+                                \Close{y'''}
+                            }{
+                                y''' : \One
+                            }
+                            \using\CloseRule
+                        \]
+                        \justifies
+                        \wtp{
+                            \Fork{y''}\v{y'''}{\Link\u\v}{\Close{y'''}}
+                        }{
+                            u : X,
+                            y'' : \dual\X \Ten \One
+                        }
+                        \using\ForkRule
+                    \]
+                    \justifies
+                    \wtp{
+                        \Join{y'}\u{y''}.
+                        \Fork{y''}\v{y'''}{\Link\u\v}{\Close{y'''}}
+                    }{
+                        y' : X \Par (\dual\X \Ten \One)
+                    }
+                    \using\JoinRule
+                \]
+                \justifies
+                \wtp{
+                    \Forall\y\X{y'}.
+                    \Join{y'}\u{y''}.
+                    \Fork{y''}\v{y'''}{\Link\u\v}{\Close{y'''}}
+                }{
+                    y : \forall\X.X \Par (\dual\X \Ten \One)
+                }
+                \using\ForallRule
+            \]
+            \justifies
+            \wtp{
+                \EchoP(x)
+            }{
+                x : \OfCourse(\forall\X.X \Par (\dual\X \Ten \One))
+            }
+            \using\ServerRule
+        \end{prooftree}
+    \]
+    %
+    where the side condition of the rule \ForallRule is trivially satifised
+    since the typing context does not contain bindings other than the one for
+    $y$.
+    %
+    \eoe
+\end{example}
 
 \subsection{Properties of Well-Typed Processes}
 \label{sec:properties}
@@ -513,26 +677,26 @@ simple example of deadlock is the process $\Cut\x{\Close\x}{\Close\x}$. This
 process is unable to reduce (because a $\Close\x$ process is meant to interact
 with a process of the form $\Wait\x.P$) and, more generally, it is unable to
 interact regardless of the context in which it occurs because the $\Close\x$
-sub-processes it contains are blocked on the channel $x$ that is bound by the
-cut.
+sub-processes it contains are blocked on the channel $x$ that is restricted by
+the cut.
 %
 In general, the property of being a deadlock is not simply the inability to
 reduce: there are irreducible processes that are not a deadlock because they
 would be able to reduce if put into a suitable context. For example, $\Wait\x.P$
 does not reduce, and yet it is not a deadlock because it would be able to make
-progress when composed in parallel with $\Close\x$. In general, even a process
-like $\Cut\y{\Wait\y.P}{\Wait\z.Q}$ where $x\ne y,z$ cannot be considered a
-deadlock, because the prefixes $\Wait\y$ and $\Wait\z$ could be exposed using
-\SWait and possibly \SComm. Let us make all this more precise.
+progress when composed in parallel with $\Close\x$. Even a process like
+$\Cut\y{\Wait\y.P}{\Wait\z.Q}$ where $x\ne y,z$ cannot be considered a deadlock,
+because the prefixes $\Wait\y$ and $\Wait\z$ could be exposed using \SWait and
+possibly \SComm. Let us make all this more precise.
 
 We say that $P$ is a \emph{thread} if it is anything but a cut. In other words,
 a thread is either a link or a process that starts with an input/output action
 of some sort. Note that a thread may contain cuts, but these cuts must all
-guarded underneath the topmost action prefix.
+guarded underneath the topmost action prefix of the thread.
 %
 We say that $P$ is \emph{observable} if $P \pcong Q$ for some thread $Q$. An
-observable process is a process that exposes an action on a free channel name
-and therefore can interact through that channel, if put into some appropriate
+observable process is a process that exposes an action on a free channel and
+therefore can interact through that channel, if put into some appropriate
 context. We say that $P$ is \emph{reducible} if $P \red Q$ for some $Q$. A
 reducible process may perform a reduction step.
 %
@@ -559,8 +723,7 @@ single unguarded hole $\Hole$, thus:
 
 As usual, we write $\ReductionContext[P]$ for the process obtained by replacing
 the hole in $\ReductionContext$ with $P$, noting that such replacement may
-capture channel names that are bound in $\ReductionContext$ and occur free in
-$P$.
+capture channel that are bound in $\ReductionContext$ and occur free in $P$.
 %
 Now we observe that if $Q_1$ and $Q_2$ both act on the same channel $x$ in
 complementary ways, then their parallel composition $\Cut\x{Q_1}{Q_2}$ is
