--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -59,6 +59,7 @@
 \newcommand{\TrueP}{\mathit{True}}
 \newcommand{\FalseP}{\mathit{False}}
 \newcommand{\NotP}{\mathit{Not}}
+\newcommand{\EchoP}{\mathit{Echo}}
 \newcommand{\Nat}{\mathbb{N}}
 \newcommand{\Bool}{\mathbb{B}}
 \newcommand{\Real}{\mathbb{R}}
