--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -103,9 +103,10 @@ namely typing preservation, deadlock freedom and runtime safety.
 %
 \Cref{sec:agda} presents a roadmap of the Agda formalization and discusses its
 key aspects with particular emphasis on the representation of channel names and
-of typing contexts.
+of typing contexts. We assume that the reader is somewhat knowledgeable about
+Agda, but we also recall a few key definitions from Agda's standard library.
 %
-\Cref{sec:examples} illustrates a few examples of \LCP processes as they are
+\Cref{sec:examples} illustrates some examples of \LCP processes as they are
 represented in Agda and shows how to use Agda as an interpreter for \LCP.
 %
 \Cref{sec:related} discusses related work more in detail by providing a
