--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -120,7 +120,7 @@
 \newcommand{\VarSet}{\mathcal{V}}
 \newcommand{\ProcessSet}{\mathcal{P}}
 
-\newcommand{\InTag}{\mktag{in}}
+\newcommand{\InTag}{\mktag{inj}}
 \newcommand{\LeftTag}{\InTag_1}
 \newcommand{\RightTag}{\InTag_2}
 \newcommand{\AddTag}{\mktag{add}}
