excusatio non petita accusatio manifesta

--- a/paper/Congruence.lagda.tex
+++ b/paper/Congruence.lagda.tex
@@ -247,3 +247,11 @@ that allows us to apply $\pcong$ within cuts, but not underneath prefixes. This
 limited form of pre-congruence turns out to be sufficient for the development
 that follows.
 \end{AgdaAlign}
+
+We concede that the definition of these pre-congruence rules (including those
+not discussed here) can be difficult to decipher. In part, this is due to the
+fact that splitting proofs are manifest and no longer hidden within separating
+conjunctions as we have done in \Cref{sec:process-agda} because we need them to
+enforce the side conditions of the rules in \Cref{tab:semantics}. Also, using an
+intrinsically-typed representation of processes, pre-congruence and reduction
+rules incorporate the proof that they preserve typing.
